<resources>
    <string name="app_name">9.2_Vlad_OrderMenu</string>
    <string name="button_plus">+</string>
    <string name="_0">0</string>
    <string name="button_minus">-</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="enter_your_name">Enter your name</string>
</resources>