<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #e0dede"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/enter_your_name"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/textView_toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="16dp"
        android:text="@string/toppings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

    <CheckBox
        android:id="@+id/checkbox_whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/whipped_cream"
        android:textAlignment="viewEnd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_toppings" />

    <CheckBox
        android:id="@+id/checkbox_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/chocolate"
        android:textAlignment="viewEnd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_whipped_cream" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/quantity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_chocolate" />

    <Button
        android:id="@+id/button_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#969393"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="16sp"
        app:iconTint="#969393"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_reciept" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#969393"
        android:text="@string/button_minus"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity" />

    <TextView
        android:id="@+id/text_view_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_0"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="@id/button_minus"
        app:layout_constraintLeft_toRightOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@id/quantity"
        app:layout_constraintTop_toTopOf="@id/button_minus" />

    <TextView
        android:id="@+id/text_view_reciept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:visibility="visible"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_minus"

        />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#969393"
        android:text="@string/button_plus"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/text_view_amount"
        app:layout_constraintTop_toBottomOf="@id/quantity" />
</androidx.constraintlayout.widget.ConstraintLayout>